# result

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
docs/: CMakeCCompilerId_8c.html  CopyOnlyEntity_8hpp_source.html  Error_8hpp__dep__incl.map  LICENSE_source.html  MoveOnlyEntity_8hpp.html  NormalEntity_8hpp_source.html  ____internal_2result_8hpp__dep__incl.map  ____internal_2result_8hpp__dep__incl.md5  ____internal_2result_8hpp__incl.map  ____internal_2result_8hpp_source.html  classasuka1975_1_1internal_1_1visitor__utils_1_1MapVisitor-members.html  classes.html  dir_000001_000002.html  dir_000009_000005.html  dir_138721ee7f74046e8cfee733c0c312b3_dep.map  dir_138721ee7f74046e8cfee733c0c312b3_dep.md5  dir_5eeff18a5e70edbd276d42ee97ec054a.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_68267d1309a1af8e8297ef4c3efbcdba_dep.md5  dir_ae6fa1869faa834d06e05030c71da1c1.html  dir_ae6fa1869faa834d06e05030c71da1c1_dep.map  dir_c5384fcdc9dc09642f9ddbfa7f68ff39.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_d44c64559bbebec7f509842c48db8b23_dep.map  dir_d44c64559bbebec7f509842c48db8b23_dep.md5  files.html  functions_func.html  globals_defs.html  globals_vars.html  graph_legend.html  namespaceasuka1975.html  namespaceasuka1975_1_1internal_1_1visitor__utils.html  namespaces.html  pages.html  result_8cpp.html  result_8cpp__incl.map  result_8cpp__incl.md5  (+15 more)
html/: index.html  (+64 more)
test/: CMakeLists.txt  CopyOnlyEntity.hpp  Error.hpp  MoveOnlyEntity.hpp  NormalEntity.hpp  result_creation_test.cpp  result_flatmap_test.cpp  result_map_test.cpp  result_test.cpp  result_visit_test.cpp
(+118 files in other folders)
